--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,32 @@
-alembic==1.13.1
-blinker==1.8.2
-click==8.1.7
-Flask==3.0.3
-Flask-JWT-Extended==4.6.0
-Flask-Migrate==4.0.7
-Flask-SQLAlchemy==3.1.1
-greenlet==3.0.3
-itsdangerous==2.2.0
-Jinja2==3.1.4
-Mako==1.3.5
-MarkupSafe==2.1.5
-PyJWT==2.8.0
-SQLAlchemy==2.0.30
-typing_extensions==4.12.2
-Werkzeug==3.0.3
+blinker==1.4
+chardet==5.2.0
+command-not-found==0.3
+cryptography==3.4.8
+dbus-python==1.2.18
+distro==1.7.0
+distro-info==1.1+ubuntu0.1
+httplib2==0.20.2
+importlib-metadata==4.6.4
+jeepney==0.7.1
+keyring==23.5.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+more-itertools==8.10.0
+netifaces==0.11.0
+oauthlib==3.2.0
+pillow==10.3.0
+PyGObject==3.42.1
+PyJWT==2.3.0
+pyparsing==2.4.7
+python-apt==2.4.0+ubuntu2
+PyYAML==5.4.1
+reportlab==4.2.0
+SecretStorage==3.3.1
+six==1.16.0
+systemd-python==234
+ubuntu-advantage-tools==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+wadllib==1.3.6
+zipp==1.0.0
